; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_ecdsa.c_mbedtls_ecdsa_genkey.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_ecdsa.c_mbedtls_ecdsa_genkey.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mbedtls_ecdsa_genkey(%struct.TYPE_3__* %0, i32 %1, i32 (i8*, i8*, i64)* %2, i8* %3) #0 {
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32 (i8*, i8*, i64)*, align 8
  %8 = alloca i8*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 (i8*, i8*, i64)* %2, i32 (i8*, i8*, i64)** %7, align 8
  store i8* %3, i8** %8, align 8
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 2
  %11 = load i32, i32* %6, align 4
  %12 = call i64 @mbedtls_ecp_group_load(i32* %10, i32 %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %25, label %14

14:                                               ; preds = %4
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 2
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 1
  %19 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i32 0, i32 0
  %21 = load i32 (i8*, i8*, i64)*, i32 (i8*, i8*, i64)** %7, align 8
  %22 = load i8*, i8** %8, align 8
  %23 = call i64 @mbedtls_ecp_gen_keypair(i32* %16, i32* %18, i32* %20, i32 (i8*, i8*, i64)* %21, i8* %22)
  %24 = icmp ne i64 %23, 0
  br label %25

25:                                               ; preds = %14, %4
  %26 = phi i1 [ true, %4 ], [ %24, %14 ]
  %27 = zext i1 %26 to i32
  ret i32 %27
}

declare dso_local i64 @mbedtls_ecp_group_load(i32*, i32) #1

declare dso_local i64 @mbedtls_ecp_gen_keypair(i32*, i32*, i32*, i32 (i8*, i8*, i64)*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
